--- a/ui_coding/css/custom.css
+++ b/ui_coding/css/custom.css
@@ -10,18 +10,19 @@ body {
 }
 /* index.html */
 #backdrop {
-    background: url("http://placehold.it/1349x600");
+    background: url("http://placehold.it/1349x600") center;
     height: 600px;
 }
 #slogan {
     background: rgba(0,0,0,0.5);
-    position: absolute;
     border-radius: 5px;
     padding: 10px;
     width: 700px;
     max-width: 700px;
-    left: 324.5px;
-    top: 450px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    top: 70%;
 }
 #slogan h2, #slogan h4 {
     color: #FFFFFF;
@@ -94,7 +95,9 @@ body {
 /* explore.html */
 #left-panel {
     padding: 20px 10px;
-    max-height: 500px;
+    overflow-y: scroll;
+}
+#right-panel {
     overflow-y: scroll;
 }
 #category, #tags {
@@ -105,9 +108,6 @@ body {
 }
 #sorting-row {
     padding: 10px 5px;
-}
-.content-pill img {
-    max-width: 250px;
 }
 .content-pill-title {
     font-size: 25px;
