--- a/ui_coding/jade/explore.jade
+++ b/ui_coding/jade/explore.jade
@@ -73,80 +73,92 @@ block body-content
           .content-pill-author
             span
               img.img-circle(src="http://placehold.it/20x20")
-            span &nbsp;&nbsp;&nbsp;Author name
+            span &nbsp;&nbsp;Author name
           .content-pill-description.text-justify Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           .well.zero-padding.content-pill-footer
             .label.label-success Project
             .label.label-default
               span.glyphicon.glyphicon-eye-open
-              span 999
+                span &nbsp;999
             .label.label-default
               span.glyphicon.glyphicon-stats
-              span 999
+                span &nbsp;999
+            .label.label-default
+              span.glyphicon.glyphicon-stats
+                span &nbsp;888
+            .label.label-default
+              span.glyphicon.glyphicon-stats
+                span &nbsp;888
         a.col-xs-12.col-sm-6.col-md-3.zero-margin.content-pill(href="brainstorm.html")
           img.img-responsive(src="http://placehold.it/500x300")
           .content-pill-title Title
           .content-pill-author
             span
               img.img-circle(src="http://placehold.it/20x20")
-            span &nbsp;&nbsp;&nbsp;Author name
+            span &nbsp;&nbsp;Author name
           .content-pill-description.text-justify Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           .well.zero-padding.content-pill-footer
             .label.label-warning Brainstorm
             .label.label-default
               span.glyphicon.glyphicon-eye-open
-              span 999
+                span &nbsp;999
             .label.label-default
               span.glyphicon.glyphicon-stats
-              span 999
+                span &nbsp;999
         a.col-xs-12.col-sm-6.col-md-3.zero-margin.content-pill(href="brainstorm.html")
           img.img-responsive(src="http://placehold.it/500x300")
           .content-pill-title Title
           .content-pill-author
             span
               img.img-circle(src="http://placehold.it/20x20")
-            span &nbsp;&nbsp;&nbsp;Author name
+            span &nbsp;&nbsp;Author name
           .content-pill-description.text-justify Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           .well.zero-padding.content-pill-footer
             .label.label-warning Brainstorm
             .label.label-default
               span.glyphicon.glyphicon-eye-open
-              span 999
+                span &nbsp;999
             .label.label-default
               span.glyphicon.glyphicon-stats
-              span 999
+                span &nbsp;999
         a.col-xs-12.col-sm-6.col-md-3.zero-margin.content-pill(href="project.html")
           img.img-responsive(src="http://placehold.it/500x300")
           .content-pill-title Title
           .content-pill-author
             span
               img.img-circle(src="http://placehold.it/20x20")
-            span &nbsp;&nbsp;&nbsp;Author name
+            span &nbsp;&nbsp;Author name
           .content-pill-description.text-justify Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           .well.zero-padding.content-pill-footer
             .label.label-success Project
             .label.label-default
               span.glyphicon.glyphicon-eye-open
-              span 999
+                span &nbsp;999
             .label.label-default
               span.glyphicon.glyphicon-stats
-              span 999
+                span &nbsp;999
+            .label.label-default
+              span.glyphicon.glyphicon-stats
+                span &nbsp;888
+            .label.label-default
+              span.glyphicon.glyphicon-stats
+                span &nbsp;888
         a.col-xs-12.col-sm-6.col-md-3.zero-margin.content-pill(href="brainstorm.html")
           img.img-responsive(src="http://placehold.it/500x300")
           .content-pill-title Title
           .content-pill-author
             span
               img.img-circle(src="http://placehold.it/20x20")
-            span &nbsp;&nbsp;&nbsp;Author name
+            span &nbsp;&nbsp;Author name
           .content-pill-description.text-justify Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           .well.zero-padding.content-pill-footer
             .label.label-warning Brainstorm
             .label.label-default
               span.glyphicon.glyphicon-eye-open
-              span 999
+                span &nbsp;999
             .label.label-default
               span.glyphicon.glyphicon-stats
-              span 999
+                span &nbsp;999
 
 block script
   script.
