--- a/client/stylesheets/custom.css
+++ b/client/stylesheets/custom.css
@@ -1,3 +1,9 @@
+.project:hover {
+    cursor: pointer
+}
+
+
+/*  ----------------------------------------  */
 body {
     /* fix content under navbar*/
     padding-top: 60px;
@@ -109,12 +115,175 @@ body {
 #sorting-row {
     padding: 10px 5px;
 }
+.content-pill {
+    margin: 3px 0px;
+    color: inherit;
+    text-decoration: none;
+}
+.content-pill:hover, .content-pill:visited, .content-pill:focus {
+    color: inherit;
+    text-decoration: none;
+}
 .content-pill-title {
-    font-size: 25px;
+    font-size: 24px;
+}
+.content-pill-author {
+    vertical-align: middle;
+}
+.content-pill-footer .label {
+    font-size: 12px;
+    vertical-align: middle;
+    padding: .2em .5em .3em;
 }
 .content-pill-description {
     font-size: 14px;
 }
 .content-pill-footer {
-    padding: 5px;
+    padding: 5px 0px;
+}
+/* idea page */
+.brainstorm-details {
+    padding: 5px 0px;
+}
+.brainstorm-update-me-button {
+    margin: 10px 2px;
+}
+.image-gallery {
+    height: 500px;
+    max-height: 500px;
+}
+.gallery-on-view {
+    height: 300px;
+    max-height: 300px;
+}
+.gallery-thumbnail {
+    padding: 5px 0px;
+    height: 300px;
+    max-height: 300px;
+}
+.owl-carousel {
+    margin: 5px 0px;
+}
+.owl-carousel img {
+    padding: 0px 5px;
+}
+.owl-carousel img:hover {
+    border: 1px solid #000000;
+}
+#ideas {
+    padding: 10px 0px;
+}
+.margin-top-bottom {
+    margin: 10px 0px;
+}
+#comment-form {
+    margin: 15px;
+}
+#submit-button {
+    margin: 10px;
+}
+#comment-box-header {
+    margin: 10px 0px;
+    border-bottom: 2px solid #000000;
+    font-size: 20px;
+}
+.comment-post-left {
+    width: 150px;
+    max-width: 150px;
+    display: inline-block;
+}
+.comment-stats {
+    padding: 0px 10px;
+}
+.comment-post {
+    padding: 5px 2px;
+}
+.comment-post-stats {
+    padding: 5px 2px;
+}
+.comment-post-content {
+    padding: 5px 2px;
+}
+/* creating bubble */
+.bubble {
+    width: 600px;
+    max-width: 600px;
+    background-color: #F2F2F2;
+    border-radius: 5px;
+    box-shadow: 0 0 6px #B2B2B2;
+    display: inline-block;
+    padding: 10px 18px;
+    position: relative;
+    vertical-align: top;
+}
+.bubble::before {
+    background-color: #F2F2F2;
+    content: "\00a0";
+    display: block;
+    height: 16px;
+    position: absolute;
+    top: 11px;
+    transform:             rotate( 29deg ) skew( -35deg );
+        -moz-transform:    rotate( 29deg ) skew( -35deg );
+        -ms-transform:     rotate( 29deg ) skew( -35deg );
+        -o-transform:      rotate( 29deg ) skew( -35deg );
+        -webkit-transform: rotate( 29deg ) skew( -35deg );
+    width:  20px;
+}
+.left {
+    float: left;   
+    margin: 5px 45px 5px 20px;         
+}
+.left::before {
+    box-shadow: -2px 2px 2px 0 rgba( 178, 178, 178, .4 );
+    left: -9px;           
+}
+/* project.html */
+.project-team-members {
+    padding: 5px 0px;
+}
+.project-team-members-view-all {
+    margin: 8px 2px;
+}
+.project-user-options {
+    border-top: 3px solid #d3d3d3;
+    border-bottom: 3px solid #d3d3d3;
+}
+.project-update-me-button, .project-join-now-button {
+    margin: 10px 2px;
+}
+#dashboard, #project-tasks, #project-discussion {
+    padding: 8px 2px;
+}
+.project-discussion-new-topic {
+    padding: 10px 0px;
+}
+#project-discussion-list {
+    margin: 5px 0px;
+}
+.title-col {
+    width: 27%;
+}
+.author-col {
+    width: 10%;
+}
+.created-col {
+    width: 10%;
+}
+.joined-col {
+    width: 20%;
+}
+.post-col {
+    width: 8%;
+}
+.view-col {
+    width: 8%;
+}
+.last-active-col {
+    width: 17%;
+}
+.project-discussion-img-inline {
+    max-width: 40px;
+    display: inline-block;
+    padding: 0px 2px;
 }
